crates/engram-cli/tests/cli/snapshot/snapshots/cli__snapshot__help__help_add.snap
---
source: crates/engram-cli/tests/cli/snapshot/help.rs
expression: "f.run_bare(& [\"add\", \"--help\"])"
---
$ engramdb add --help
exit: 0
--- stdout ---
Add a new memory

Usage: engramdb add [OPTIONS] [CONTENT]

Arguments:
  [CONTENT]
          Memory content as a trailing positional (alternative to --content). This is the form the Quick Start uses: `engramdb add -t decision -s "..." "content"`

Options:
  -t, --type <TYPE>
          Type of memory

  -c, --content <CONTENT>
          Memory content

  -s, --summary <SUMMARY>
          Brief summary (required; prompted for in an interactive terminal)

  -T, --title <TITLE>
          Short title (a few words) for human-readable filenames

  -p, --physical <PHYSICAL>
          Physical scope (file paths or globs, can be repeated)

  -l, --logical <LOGICAL>
          Logical scope (dot-notation domains, can be repeated)

      --tags <TAGS>
          Tags (comma-separated or repeated)

      --criticality <CRITICALITY>
          Criticality score (0.0 to 1.0)

      --confidence <CONFIDENCE>
          Confidence score (0.0 to 1.0)
          
          [default: 0.8]

      --details <DETAILS>
          Extended details

      --visibility <VISIBILITY>
          Visibility (shared or personal)

      --audience <AUDIENCE>
          Audience for a group/global share: project and/or group ids that may see this memory (comma-separated). Omit for whole-group visibility. Only meaningful with --group or --global

      --supersedes <SUPERSEDES>
          IDs of memories this one supersedes (comma-separated)

      --epistemic <EPISTEMIC>
          Epistemic class: fact, observation, or decision (defaults from type)

      --premise <PREMISE>
          Premise this memory depends on (e.g. "while we pin ort rc.12")

      --invalidated-by <INVALIDATED_BY>
          Paths/globs whose change invalidates this memory (repeatable)

      --origin-task <ORIGIN_TASK>
          Task/feature this memory was created for

      --generality <GENERALITY>
          Generality: project (default) or task

      --valid-from <VALID_FROM>
          Valid-time start (RFC3339) — backdate when the claim became true

      --decay-strategy <DECAY_STRATEGY>
          Decay strategy: none, linear, exponential, or step

      --decay-half-life <DECAY_HALF_LIFE>
          Half-life in seconds for decay

      --decay-ttl <DECAY_TTL>
          TTL in seconds for decay

      --decay-floor <DECAY_FLOOR>
          Minimum decay factor (0.0-1.0)

  -i, --interactive
          Launch interactive TUI prompts

  -e, --editor
          Open $EDITOR for content entry

      --details-file <DETAILS_FILE>
          Read details from file

      --format <FORMAT>
          Output format

          Possible values:
          - pretty: Human-friendly colored output with formatting
          - json:   JSON output for programmatic parsing
          - plain:  Plain text output without colors

      --global
          Operate on the global (cross-project) memory store instead of the current project

      --group <GROUP>
          Write the memory into the named group store instead of the current project. Repo-relative physical scope is stripped on group writes (see the multi-project-memories design). Mutually exclusive with `--global`

      --json
          Output as JSON

  -q, --quiet
          Suppress non-essential output

  -v, --verbose
          Verbose output

      --no-color
          No colored output

      --dir <DIR>
          Working directory (default: current directory)

      --embedding-backend <EMBEDDING_BACKEND>
          Embedding backend: auto, onnx, or ollama

      --in-process
          Force in-process model loading — never contact the shared embedding daemon. Equivalent to setting ENGRAMDB_IN_PROCESS=1

      --spawn-daemon
          Spawn the shared embedding daemon if it is not already running, then route through it. By default the CLI only uses a daemon that is already running (connect-only)

      --no-maintenance
          Skip the automatic main-worktree maintenance pass (orphan-project cleanup + a quick store health check) for this invocation. Equivalent to setting ENGRAMDB_DISABLE_AUTO_MAINTENANCE=1

  -h, --help
          Print help (see a summary with '-h')
--- stderr ---
